# primesum

./: LICENSE  PrimeSum.cabal  README.md
exe/: Main.hs
src/: PrimeSum.hs  Subsequences.hs
